[package]
name    = "stern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default       = []
nohash-hasher = ["dep:nohash-hasher"]
serde         = ["dep:serde"]

[dependencies]
assert-unchecked  = { version = "0.1.2" }
hashbrown         = { version = "0.14.5" }
rustc-hash        = { version = "2.0.0" }
static_assertions = { version = "1.1.0" }

nohash-hasher = { version = "0.2.0", optional = true }
serde         = { version = ">=1", optional = true }
